; ModuleID = '/home/carl/AnghaBench/openwrt/package/utils/fritz-tools/src/extr_fritz_tffs_nand_read.c_read_sectoroob.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/utils/fritz-tools/src/extr_fritz_tffs_nand_read.c_read_sectoroob.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtd_oob_buf = type { i32, i32, i32 }

@oobbuf = common dso_local global i32 0, align 4
@TFFS_SECTOR_OOB_SIZE = common dso_local global i32 0, align 4
@mtdfd = common dso_local global i32 0, align 4
@MEMREADOOB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @read_sectoroob to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_sectoroob(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.mtd_oob_buf, align 4
  store i32 %0, i32* %3, align 4
  %5 = getelementptr inbounds %struct.mtd_oob_buf, %struct.mtd_oob_buf* %4, i32 0, i32 0
  %6 = load i32, i32* @oobbuf, align 4
  store i32 %6, i32* %5, align 4
  %7 = getelementptr inbounds %struct.mtd_oob_buf, %struct.mtd_oob_buf* %4, i32 0, i32 1
  %8 = load i32, i32* @TFFS_SECTOR_OOB_SIZE, align 4
  store i32 %8, i32* %7, align 4
  %9 = getelementptr inbounds %struct.mtd_oob_buf, %struct.mtd_oob_buf* %4, i32 0, i32 2
  %10 = load i32, i32* %3, align 4
  store i32 %10, i32* %9, align 4
  %11 = load i32, i32* @mtdfd, align 4
  %12 = load i32, i32* @MEMREADOOB, align 4
  %13 = call i64 @ioctl(i32 %11, i32 %12, %struct.mtd_oob_buf* %4)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %17

16:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %16, %15
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i64 @ioctl(i32, i32, %struct.mtd_oob_buf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
